cleanup & examples added

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,9 @@ __pycache__/
 *Protokolle/
 code-examples/
 Thumbs.db
-/3D/difference/Thumbs.db
+/3D/compositing
+/3D/laser_*
+/images/difference/Thumbs.db
 /code/_alt/
 /images/tests/
 
