--- a/config.json
+++ b/config.json
@@ -9,12 +9,18 @@
     "horizontal_fov" : 48,
     "laser_angle_start" : -28.0,
     "angle_step": 0.5,
+
     "laser_thres": 100,
+
+    "desaturate_texture": false,
 
     "shrink_x": 1,
     "shrink_y": 3,
     "shrink_preview": 3,
     "window_size" : [800, 800],
     "verbose": false,
-    "zero" : 1e-6
+    "zero" : 1e-6,
+
+    "KDTree_radius" : 0.1,
+    "KDTree_max_nn" : 30
 }
