--- a/images/laser1a_2048_config.json
+++ b/images/laser1a_2048_config.json
@@ -1,7 +1,7 @@
 {
     "video_path": "images/laser1a_2048.mp4",
     "texture_path": "images/laser1_RGB_vertikal.jpg",
-    "desaturate_texture": false,
+    "desaturate": false,
 
     "export_path": "export/laser1a_2048",
     "export_type" : "pcd",
@@ -23,6 +23,6 @@
     "verbose": false,
     "zero_value" : 1e-6,
 
-    "KDTree_radius" : 0.1,
+    "KDTree_radius" : 5,
     "KDTree_max_nn" : 30
 }
